Add controllers for auth and metrcics